# round_robin_tournament

./: Cargo.toml  Makefile  README.md
doc/: crates.js  search-index.js  settings.html  source-files.js
doc/round_robin_tournament/: all.html  index.html  sidebar-items.js
doc/round_robin_tournament/round_robin_tournament/: fn.draw.html  fn.retrieve_encounters.html  index.html  sidebar-items.js
doc/src/round_robin_tournament/: lib.rs.html
src/: lib.rs
