[package]
name = "round_robin_tournament"
version = "0.3.0"
edition = "2018"
authors = ["Marcel Kaufmann <flocksserver@gmail.com>"]
description = "Small library to get a round robin schedule for n players."
license = "MIT OR Apache-2.0"
keywords = ["round", "robin", "tournament", "sport"]

[dependencies]
